576366: Port ATL to Java 11
Change-Id: Ia097c9f7a45c42928be586fa9c2c63a9aceb992d
Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=576366
Signed-off-by: Dennis Wagelaar <dwagelaar@gmail.com>